<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/pv_firebaseimageml"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/layout_activity_firebaseimageml_pv_contentdescription" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_firebaseimageml_results"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:autoLink="all|web|map|email"
        android:background="@color/whitesmoke"
        android:contentDescription="@string/layout_activity_firebaseimageml_mtv_results_contentdescription"
        android:isScrollContainer="true"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:text="@string/layout_activity_firebaseimageml_mtv_results_text"
        android:textColorLink="@color/defaultLinkColor"
        android:textSize="16sp" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbtn_firebaseimageml_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:contentDescription="@string/layout_activity_firebaseimageml_mbtn_label_contentdescription"
                android:text="@string/layout_activity_firebaseimageml_mbtn_label_text"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="normal"
                app:backgroundTint="@color/colorPrimaryDark" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbtn_firebaseimageml_ocr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:contentDescription="@string/layout_activity_firebaseimageml_mbtn_ocr_contentdescription"
                android:text="@string/layout_activity_firebaseimageml_mbtn_ocr_text"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="normal"
                app:backgroundTint="@color/colorPrimaryDark" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbtn_firebaseimageml_face"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:contentDescription="@string/layout_activity_firebaseimageml_mbtn_face_contentdescription"
                android:text="@string/layout_activity_firebaseimageml_mbtn_face_text"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="normal"
                app:backgroundTint="@color/colorPrimaryDark" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbtn_firebaseimageml_barcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:contentDescription="@string/layout_activity_firebaseimageml_mbtn_barcode_contentdescription"
                android:text="@string/layout_activity_firebaseimageml_mbtn_barcode_text"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="normal"
                app:backgroundTint="@color/colorPrimaryDark" />
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>